# drasi.containerapps.pot

./: .gitignore  CHANGELOG.md  README.md  azure.yaml
drasi/: drasi.yaml
forks/drasi-server/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  DOCKER.md  Dockerfile  Dockerfile.cross-gnu  Dockerfile.cross-gnu-aarch64  Dockerfile.cross-musl  Dockerfile.cross-musl-aarch64  Dockerfile.cross-windows-gnu  Makefile  README.md  build.rs  clippy.toml  docker-compose-server-only.yml  docker-compose.yml  rust-toolchain.toml
forks/drasi-server/.cargo/: config.toml
forks/drasi-server/.claude/: notify.sh
forks/drasi-server/.devcontainer/: devcontainer.json  post-create.sh
forks/drasi-server/.devcontainer/getting-started/: devcontainer.json  post-create.sh
forks/drasi-server/.devcontainer/playground/: devcontainer.json  post-create.sh
forks/drasi-server/.devcontainer/trading/: devcontainer.json  post-create.sh
forks/drasi-server/.github/: CODEOWNERS
forks/drasi-server/.github/agents/: create-agentic-workflow.agent.md  debug-agentic-workflow.agent.md
forks/drasi-server/.github/aw/: actions-lock.json  github-agentic-workflows.md
forks/drasi-server/.github/aw/schemas/: agentic-workflow.json
forks/drasi-server/.github/workflows/: copilot-setup-steps.yml  integration-test-getting-started.yml  lint.yml  release.yaml  test.yml  validate-yaml-snippets.lock.yml  validate-yaml-snippets.md
forks/drasi-server/azure/: GETTING-STARTED-DEMO.md  README.md  getting-started.bicep  main.bicep  main.bicepparam
forks/drasi-server/config/: server-docker.yaml  server-minimal.yaml  server-with-env-vars.yaml
forks/drasi-server/dev-tools/vscode/drasi-server/: LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
forks/drasi-server/docs/: plugin-architecture.md
forks/drasi-server/examples/: .gitignore  README.md  basic_setup.rs
forks/drasi-server/examples/configs/: README.md
forks/drasi-server/examples/configs/01-fundamentals/: first-continuous-query.yaml  hello-world.yaml  mock-with-logging.yaml
forks/drasi-server/examples/configs/02-sources/: grpc-streaming-source.yaml  http-webhook-receiver.yaml  postgres-cdc-complete.yaml
forks/drasi-server/examples/configs/03-reactions/: grpc-streaming-reaction.yaml  http-webhook-sender.yaml  log-with-templates.yaml  profiler-performance.yaml  sse-browser-streaming.yaml
forks/drasi-server/examples/configs/04-query-patterns/: aggregation-queries.yaml  filter-and-projection.yaml  multi-source-queries.yaml  time-based-triggers.yaml
forks/drasi-server/examples/configs/05-advanced-features/: adaptive-batching.yaml  capacity-tuning.yaml  multi-instance.yaml  persistent-storage.yaml  read-only-deployment.yaml
forks/drasi-server/examples/configs/06-real-world-scenarios/: absence-of-change.yaml  iot-sensor-alerts.yaml  order-exception-handling.yaml  real-time-dashboard.yaml
forks/drasi-server/examples/getting-started/: .env  .env.example  README.md  locations.jsonl  requests.http  server-config.yaml
forks/drasi-server/examples/getting-started/configs/: getting-started-step-3.yaml  getting-started-step-4.yaml  getting-started-step-5.yaml  getting-started-step-6.yaml
forks/drasi-server/examples/getting-started/database/: docker-compose.yml  init.sql
forks/drasi-server/examples/getting-started/scripts/: add-message.sh  cleanup.sh  delete-message.sh  download.ps1  download.sh  open-viewer.sh  setup-database.sh  start-server.sh  stream-events.sh  view-results.sh
forks/drasi-server/examples/playground/: .gitignore  README.md  start.sh  stop.sh  web_api.http  web_api_query.http  web_api_reaction.http  web_api_source.http
forks/drasi-server/examples/sse-cli/: Cargo.toml  README.md
forks/drasi-server/examples/trading/: CONTRIBUTING.md  README.md  start-demo.sh  stop-demo.sh  web_api.http  web_api_query.http  web_api_source.http
forks/drasi-server/src/: builder.rs  builder_result.rs  cli_styles.rs  dynamic_loading.rs  factories.rs  instance_registry.rs  lib.rs  main.rs  persistence.rs  plugin_install.rs  plugin_lockfile.rs  plugin_registry.rs  server.rs
forks/drasi-server/src/api/: joins_tests.rs  mod.rs  tests.rs  version.rs
forks/drasi-server/src/config/: loader.rs  mod.rs  types.rs  validation.rs
forks/drasi-server/src/init/: builder.rs  mod.rs  prompts.rs
forks/drasi-server/src/plugin/: install.rs  list.rs  mod.rs  remove.rs  search.rs  upgrade.rs
forks/drasi-server/tests/: README.md  api_contract_test.rs  api_integration_test.rs  api_persistence_test.rs  api_query_joins_test.rs  api_state_consistency_test.rs  bootstrap_results_test.rs  config_parsing_failure_test.rs  config_value_integration_test.rs  default_query_language_test.rs  dto_camelcase_test.rs  enum_serialization_test.rs  error_resilience_test.rs  example_configs_validation_test.rs  init_output_test.rs  library_integration_test.rs  openapi_test.rs  persist_index_test.rs  plugin_smoke_test.sh  readme_examples_validation_test.rs  redis_helpers_test.rs  run_all.sh  run_all_cargo_tests.sh  server_integration_test.rs  server_start_stop_test.rs  state_store_test.rs  validate_command_test.rs
forks/drasi-server/tests/test_support/: config_helpers.rs  mock_components.rs  mod.rs  redis_helpers.rs
forks/drasi-server/xtask/: Cargo.toml
forks/drasi-server/xtask/src/: main.rs  vendor.rs
(+130 files in other folders)
