# Copyright 2025 The Drasi Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [".", "xtask"]
exclude = ["examples/sse-cli"]

[package]
name = "drasi-server"
version = "0.1.0"
edition = "2021"
authors = ["Drasi Project"]
description = "Standalone Drasi server for data change processing"
license = "Apache-2.0"
repository = "https:#github.com/drasi-project/drasi-server"
default-run = "drasi-server"

[lib]
name = "drasi_server"
path = "src/lib.rs"

[[bin]]
name = "drasi-server"
path = "src/main.rs"

[dependencies]
# Drasi core library (all middleware, using system libjq instead of bundled-jq)
drasi-lib = { version = "0.4.1", features = [
  "middleware-jq",
  "middleware-decoder",
  "middleware-map",
  "middleware-parse-json",
  "middleware-promote",
  "middleware-relabel",
  "middleware-unwind",
] }

# Core models (for SourceMiddlewareConfig and other shared types)
drasi-core = "0.4.1"

# Core bootstrap providers (used by the application API)
drasi-bootstrap-noop = "0.1.9"
drasi-bootstrap-application = "0.1.10"

# Core reaction (used by the application API)
drasi-reaction-application = "0.2.9"

# Index plugins
drasi-index-rocksdb = "0.3.1"
drasi-index-garnet = "0.1.7"

# State store plugins
drasi-state-store-redb = "0.1.7"

# Plugin SDK
drasi-plugin-sdk = "0.4.2"

# Host SDK for dynamic plugin loading
drasi-host-sdk = { version = "0.4.2", features = ["registry", "fetcher"] }
oci-client = "0.16"

# Server-specific dependencies
tokio = { version = "1.44", features = ["full"] }
axum = "0.7"
bytes = "1.6"
futures-util = "0.3"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
uuid = { version = "1.0", features = ["v4"] }
indexmap = "2.0"
thiserror = "1.0"
dotenvy = "0.15"
inquire = "0.7"
handlebars = "6"
async-stream = "0.3.6"
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.8"
sha2 = "0.10"

[dev-dependencies]
# Testing utilities
async-trait = "0.1"
tracing = "0.1"
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"
assert_matches = "1.5"
serial_test = "3.0"
pretty_assertions = "1.4"
semver = "1.0"
test-case = "3.3"
wiremock = "0.5"

# Additional testing dependencies
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
rstest = "0.18"
drasi-core = "0.4.1"

# Integration testing with testcontainers
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
redis = { version = "0.24", features = ["tokio-comp", "streams"] }

[lints.rust]
warnings = "deny"

[build-dependencies]
# Use rustls with aws-lc-rs instead of ring to avoid ring's macOS cross-compilation
# assembly architecture mismatch (ring compiles asm for target instead of host).
ureq = { version = "3", default-features = false, features = ["json", "rustls-no-provider", "rustls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
flate2 = "1"
tar = "0.4"
serde_json = "1"
sha2 = "0.10"

[lints.clippy]
print_stdout = "warn"
unwrap_used = "warn"
uninlined_format_args = "warn"
module_inception = "allow"
ptr_arg = "allow"
type_complexity = "allow"
large_enum_variant = "allow"
