[workspace]

[package]
name = "drasi-sse-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool to stream SSE events from a Drasi Server query"

[[bin]]
name = "drasi-sse-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
chrono = "0.4"
